added gaps in html and crazy css

--- a/style.css
+++ b/style.css
@@ -3,6 +3,123 @@
   padding: 0;
 }
 
+html, body, .root {
+  min-height: 100%;
+}
+
 body {
   font-family: 'Uber Move Text', sans-serif;                                             
+}
+
+main {
+  display:block;
+}
+
+/*---------------------------------*/
+
+nav {
+  display: flex;
+  margin: 0 auto;
+  width: 100%;
+  padding: 12px 0px;
+  background-color:  #000;
+  height: 64px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+.nav-bar__logo {
+  display: flex;
+  flex-basis: auto;
+  list-style: none;
+  flex-grow: 0;
+  flex-shrink: 0;
+  justify-content: flex-start;
+  margin: 0;
+  
+}
+.nav-bar__logo li a {
+  display: list-item;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 24px;
+  height: 100%;
+}
+
+.nav-bar__support {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0%;
+  justify-content: flex-start;
+  list-style: none;
+}
+.nav-bar__support li a {
+  display: list-item;
+  text-decoration: none;
+  padding-inline-start: 40px;  
+  color: white;
+  align-items:center;
+  border: 1px solid #000;
+  border-radius: 25px;
+  margin: 0 5px;
+  padding: 8px 12px;
+  background-color:#000;
+  transition: filter 0.5s ease;
+}
+.nav-bar__support a:hover {
+  filter: brightness(0.4);
+}
+
+
+.nav-bar__usermenu {
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
+  justify-content: flex-end;
+  flex-basis: auto;
+  list-style: none;
+  transform: translateX(14px);
+}
+.nav-bar__usermenu li {
+  margin-right: 5px;
+}
+.nav-bar__usermenu li a {
+  display: list-item;
+  text-decoration: none;
+  padding-inline-start: 40px;
+}
+
+
+/*----------wrapper---------------*/
+
+.wrapper {
+  display: block;
+  display: flex;
+  background-image: url(/img/DotCom_Update_Earner_bg_sml2x.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 600px;
+  position: relative;
+ 
+}
+.wrapper-block {
+  display: block;
+  position: absolute;
+  background-color: white;
+  flex-basis: 50%;
+  justify-content:center ;
+  align-items: center;
+  width: 30%;
+  height: 30%;
+  margin-top: 70px;
+  margin-left: 200px;
+  flex-wrap: wrap;
+}
+.wrapper-block__nav {
+  display: flex;
+}
+.wrapper-block__nav ul{
+  display: flex;
+  justify-content: space-around;
 }
